--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,18 +16,49 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    android {
+        lintOptions {
+            disable 'RestrictedApi'
+        }
+    }
 }
 
 dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    implementation("com.mikepenz:materialdrawer:6.0.1@aar") {
+        transitive = true
+    }
+
+    //dependices for layout
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    api 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:support-annotations:24.1.1'
+    implementation 'com.android.support:design:27.1.1'
+
+
+    //for web services
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    api 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    //Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //firebase dependices
+    api 'com.google.firebase:firebase-auth:15.0.0'
+    api 'com.google.firebase:firebase-database:15.0.0'
+    api 'com.google.firebase:firebase-firestore:15.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.0.0'
+    implementation 'com.google.android.gms:play-services-auth:15.0.0'
+
+
 }
+
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
